# ExceptionIcon

./: .gitignore  ExceptionIcon.Server.sln  README.md  db.sql  package-lock.json  package.json
ExceptionIcon.Sdk/: ExceptionIcon.Sdk.csproj  ExceptionIconOptions.cs
ExceptionIcon.Sdk/Helpers/: CustomHeaders.cs
ExceptionIcon.Sdk/Models/: ExceptionInstance.cs
ExceptionIcon.Sdk/Properties/: AssemblyInfo.cs
ExceptionIcon.Server/: ExceptionIcon.Server.csproj  Global.asax.cs  Web.config  packages.config
ExceptionIcon.Server/App_Packages/StackTraceParser/: StackTraceParser.cs
ExceptionIcon.Server/Controllers/: IssueController.cs  ProfileController.cs  ProjectController.cs  UserController.cs
ExceptionIcon.Server/Helpers/: ProjectDAO.cs
ExceptionIcon.Server/Models/: HttpContext.cs  Issue.cs  Login.cs  ProjectByUser.cs
ExceptionIcon.Server/Properties/: AssemblyInfo.cs
Sdks/ExceptionIcon.JS/: README.md  exceptionicon.js
Sdks/ExceptionIcon.Node/: README.md  package.json
Sdks/ExceptionIcon.Php/: README.md  composer.json
Sdks/ExceptionIcon.Python/: README.md  pyproject.toml
Sdks/ExceptionIcon.Python/examples/: example.py
Sdks/ExceptionIcon.Python/exceptionicon/: __init__.py  client.py  models.py  options.py
Sdks/ExceptionIcon.Sdk/: README.md
backend/: ExceptionIcon.Server.sln
backend/ExceptionIcon.Server/: ExceptionIcon.Server.csproj  Global.asax  packages.config
frontend/: package.json
frontend/src/: App.js  routes.js
public/: index.html
public/css/: global.css  global.less
src/: routes.js
src/services/: api.js  auth.js
(+72 files in other folders)
