[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exceptionicon-python"
version = "0.1.0"
description = "ExceptionIcon Python SDK"
authors = [
  { name = "Pedro Fernandes", email = "pmcfernandes@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"

[project.dependencies]
requests = "^2.28"
